--- a/ublox_gps/config/evk_m8l.yaml
+++ b/ublox_gps/config/evk_m8l.yaml
@@ -1,11 +1,12 @@
 # Configuration Settings for C94-M8P device
 
-debug: 1                    # Range 0-4 (0 means no debug statements will print)
+debug: 0                    # Range 0-4 (0 means no debug statements will print)
 
 save:
   mask: 3103                # Save I/O, Message, INF Message, Nav, Receiver 
                             # Manager, Antenna, and Logging Configuration
   device: 4                 # Save to EEPROM
+save_on_shutdown: false
 
 device: /dev/ttyACM0
 frame_id: gps
@@ -13,6 +14,7 @@ rate: 10                     # in Hz
 nav_rate: 1                 # [# of measurement cycles], recommended 1 Hz, may 
                             # be either 5 Hz (Dual constellation) or 
                             # 8 Hz (GPS only)
+hnr_rate: 20
 dynamic_model: automotive    # Airborne < 2G, 2D fix not supported (3D only), 
                             # Max Alt: 50km
                             # Max Horizontal Velocity: 250 m/s, 
@@ -44,3 +46,10 @@ publish:
 
   nav:
     posecef: false
+
+
+# specify the ros topics 
+odom_topic: /navsat/odom
+imu_topic: /imu/data
+inspva_topic: /novatel_data/inspva
+inspvax_topic: /novatel_data/inspvax
