--- a/ublox_gps/config/evk_m8l.yaml
+++ b/ublox_gps/config/evk_m8l.yaml
@@ -2,10 +2,13 @@
 
 debug: 0                    # Range 0-4 (0 means no debug statements will print)
 
+imu_align: false       # Whether to do auto imu-mounting alignment calibration
+
 save:
   mask: 3103                # Save I/O, Message, INF Message, Nav, Receiver 
                             # Manager, Antenna, and Logging Configuration
-  device: 4                 # Save to EEPROM
+  device: 7                 # Save to EEPROM
+
 save_on_shutdown: false
 
 device: /dev/ttyACM0
@@ -41,11 +44,34 @@ inf:
 # Enable u-blox message publishers
 publish:
   all: true
+  rxm:
+    rtcm: false
+
   aid:
+    alm: false
+    eph: false
     hui: false
+
+  mon:
+    hw: true
 
   nav:
     posecef: false
+    status: true
+    clock: false
+    sat: false
+
+  esf:
+    meas: false
+    ins: true
+    raw: false
+    status: false
+
+  hnr:
+    pvt: true
+    ins: true
+
+
 
 
 # specify the ros topics 
